Listo, ya entendi cloudinary, que rico

--- a/server/views/image_form.hbs
+++ b/server/views/image_form.hbs
@@ -22,7 +22,35 @@
             </form>
             </div>
         </div>
-    </div>  
+    </div> 
+
+    <div class="col-md-8">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>title</th>
+                    <th>Description</th>
+                    <th>Operation</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    {{#each photos}}
+                    <tr>
+                        <td>{{title}}</td>
+                        <td>{{description}}</td>
+                        <td>
+                            <a href="{{imageUrl}}" target="_blank" class="btn btn-primary">View</a>
+                            <a href="" class="btn btn-danger">Delete</a>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tr>
+            </tbody>
+        </table> 
+
+
+    </div> 
 </div>
 
 
