Ahora si, con swipper, una libreria muy interesante

--- a/server/views/image.hbs
+++ b/server/views/image.hbs
@@ -1,4 +1,29 @@
-{{#each photos}}
-    <img src="{{imageUrl}}" alt="">
+<style>
+    .swiper-container {
+    width: 900px;
+    height: 600px;
+}
+</style>
 
-{{/each}}
+
+<!-- Slider main container -->
+<div class="swiper-container">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+        {{#each photos}}
+            <img src="{{imageUrl}}" class="swiper-slide">
+        {{/each}}
+ 
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+</div>
+
+
